--- a/config.yml
+++ b/config.yml
@@ -23,6 +23,30 @@ Questions:
         desc: "Revert to a commit"
       - name: WIP
         desc: "WIP: Work in progress"
+  - id: type
+    type: select
+    label: "Select the type of change "
+    options:
+      - name: feat
+        desc: "A new feature"
+      - name: fix
+        desc: "A bug fix"
+      - name: docs
+        desc: "Documentation only changes"
+      - name: style
+        desc: "Changes that do not affect the meaning of the code\n(white-space, formatting, missing semi-colons, etc)"
+      - name: refactor
+        desc: "A code change that neither fixes a bug nor adds a feature"
+      - name: perf
+        desc: "A code change that improves performance"
+      - name: test
+        desc: "Adding missing tests"
+      - name: chore
+        desc: "Changes to the build process or auxiliary tools\nand libraries such as documentation generation"
+      - name: revert
+        desc: "Revert to a commit"
+      - name: WIP
+        desc: "WIP: Work in progress"
 
   - id: scope
     type: text
