feat(prompts): Added subquestions condition
Now sub questions only are appended to the main LinkedList if the parent value is equal to subquestioncondition. this remove the need of confirm prompt.

--- a/config.yml
+++ b/config.yml
@@ -45,8 +45,12 @@ Questions:
     max: 1000
 
   - key: issuesConfirm
-    type: confirm
+    type: select
     label: "Does this change affect any open issues"
+    options:
+      - name: no
+      - name: yes
+    subquestionCondition: yes
     questions:
       - key: issues
         type: text
